synchronised with the chrome webstore latest version

--- a/options.html
+++ b/options.html
@@ -51,6 +51,9 @@
                        
                 </p>
                 <p>-------ISSUES---------</p>
+                
+                <br>If in any page it does not work as expected just click the screenreader icon at top right and you can disable screenreader for the current page
+                and similiarly if you want to enable you can click the screenreader icon again
                 <p>does not work well at all with safaribooksonline.com unless you deactivate the adding of notes on selecting &nbsp;text.&nbsp;
                    It does not work well offline. For offline use(like reading ebooks in html or converted to html from pdf etc), advice you to try the windows specific version mentioned below.
                 </p>
